[package]
name = "tcpbooster"
version = "0.1.0"
authors = ["Michael Zhou <mzhou@cse.unsw.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2" }
maligned = { version = "0.2", features = ["align-4k"] }
nix = { version = "0.17" }
tokio = { version = "0.2", features = ["full"] }
